# Anthills

./: .gitignore  CMakeLists.txt  README.md  local_config.cmake  main.cpp
.github/workflows/: codeql.yml
src/: Loader.cpp  Loader.h  constants.h  main.cpp
src/models/: Ant.cpp  Ant.h  Anthill.cpp  Anthill.h  Corpse.cpp  Corpse.h  Enemy.cpp  Enemy.h  Food.cpp  Food.h  README.md  Role.cpp  Role.h
src/models/Roles/: CleanerRole.cpp  CleanerRole.h  CollectorRole.cpp  CollectorRole.h  NannyRole.cpp  NannyRole.h  NoneRole.cpp  NoneRole.h  SoliderRole.cpp  SoliderRole.h
src/models/informers/: AntListener.cpp  AntListener.h  NotificationListener.cpp  NotificationListener.h  NotificationManager.cpp  NotificationManager.h
src/views/: AntRender.cpp  AntRender.h  CorpseRender.cpp  CorpseRender.h  DrawableEntity.cpp  DrawableEntity.h  Enemy_render.cpp  Enemy_render.h  FoodRender.cpp  FoodRender.h  RenderManager.cpp  RenderManager.h  TextureManager.cpp  TextureManager.h
